openshift.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: django-for-flg-server
    name: ubuntu
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: ubuntu:18.04
      from:
        kind: DockerImage
        name: ubuntu:18.04
      generation: null
      importPolicy: {}
      name: "18.04"
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: django-for-flg-server
    name: django-for-flg-server
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: django-for-flg-server
    name: django-for-flg-server
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: django-for-flg-server:latest
    postCommit: {}
    resources: {}
    source:
      git:
        uri: https://github.com/andesm/django-for-flg-server
      type: Git
    strategy:
      dockerStrategy:
        from:
          kind: ImageStreamTag
          name: ubuntu:18.04
      type: Docker
    triggers:
    - github:
        secret: n72AJ9cdTKJJ4vAJcqod
      type: GitHub
    - generic:
        secret: kcZ-ZhmsJjZdJk7gBWYi
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: django-for-flg-server
    name: django-for-flg-server
  spec:
    replicas: 1
    selector:
      app: django-for-flg-server
      deploymentconfig: django-for-flg-server
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: django-for-flg-server
          deploymentconfig: django-for-flg-server
      spec:
        containers:
        - image: django-for-flg-server:latest
          name: django-for-flg-server
          resources: {}
          ports:
          - containerPort: 10080
            protocol: TCP
          volumeMounts:
          - name: nfs-share
            mountPath: /flg
        volumes:
        - name: nfs-share
          persistentVolumeClaim:
            claimName: nfs-pvc
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - django-for-flg-server
        from:
          kind: ImageStreamTag
          name: django-for-flg-server:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: django-for-flg-server
    name: django-for-flg-server
  spec:
    ports:
    - name: 10080-tcp
      port: 10080
      protocol: TCP
      targetPort: 10080
    selector:
      app: django-for-flg-server
      deploymentconfig: django-for-flg-server
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: '2018-07-14T01:33:23Z'
    labels:
      app: django-for-flg-server
    name: django-for-flg-server
    namespace: flg
    resourceVersion: '166845'
    selfLink: /apis/route.openshift.io/v1/namespaces/flg/routes/django-for-flg-server
    uid: e5f8f65c-8705-11e8-a003-000c29e709e7
  spec:
    host: openshift.flg.jp
    path: /apps
    port:
      targetPort: 10080-tcp
    to:
      kind: Service
      name: django-for-flg-server
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
      - conditions:
          - lastTransitionTime: '2018-07-14T01:33:23Z'
            status: 'True'
            type: Admitted
        host: openshift.flg.jp
        routerName: router
        wildcardPolicy: None
kind: List
metadata: {}
---
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: postgres
    name: postgres
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: postgres
      from:
        kind: DockerImage
        name: postgres
      generation: null
      importPolicy: {}
      name: latest
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: postgres
    name: postgres
  spec:
    replicas: 1
    selector:
      app: postgres
      deploymentconfig: postgres
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: postgres
          deploymentconfig: postgres
      spec:
        containers:
        - image: postgres
          name: postgres
          ports:
          - containerPort: 5432
            protocol: TCP
          resources: {}
          volumeMounts:
          - name: nfs-share
            mountPath: /var/lib/postgresql/data
            subPath: openshift/db/postgres
        volumes:
        - name: nfs-share
          persistentVolumeClaim:
            claimName: nfs-pvc
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - postgres
        from:
          kind: ImageStreamTag
          name: postgres:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: postgres
    name: postgres
  spec:
    ports:
    - name: 5432-tcp
      port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      app: postgres
      deploymentconfig: postgres
  status:
    loadBalancer: {}
kind: List
metadata: {}
